# rikirobot_project

./: README.md  riki_bashrc  system_bringup.sh
frontier_exploration/plugins/: bounded_explore_layer.cpp
riki_msgs/: CMakeLists.txt  package.xml
riki_msgs/msg/: Claw.msg  Tracking.msg
riki_pid/cfg/: rikiPID.cfg
riki_pid/src/: pid_configure.cpp
rikirobot/: CMakeLists.txt  package.xml
rikirobot/launch/: auto_slam.launch  bringup.launch  lidar_slam.launch  navigate.launch  stm32bringup.launch  xtion_gmapping.launch  ydlidar_slam.launch  ydlidar_slam1.launch
rikirobot/maps/: house.pgm
rikirobot/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.xml  move_base_params.yaml  xtion_fake_laser_openni2.xml
rikirobot/rviz/: auto_slam.rviz
rikirobot/src/: riki_base_node.cpp  riki_base_node_backup.cpp
rikirobot_4wd/: CMakeLists.txt  README.md  package.xml
rikirobot_4wd/launch/: astra_xtion_gmapping.launch  auto_slam.launch  bringup.launch  lidar_slam.launch  move_base.launch  navigate.launch  stm32bringup.launch
rikirobot_4wd/maps/: house.pgm
rikirobot_4wd/param/: astra_laser.xml  astra_pro.xml  base_local_planner_params.yaml  xtion.xml  xtion_fake_laser_openni2.xml
rikirobot_4wd/src/: riki_base_node_4wd.cpp
rikirobot_apps/launch/: object_tracker.launch
rikirobot_vision/: CMakeLists.txt  README.md  package.xml  setup.py
rikirobot_vision/launch/: camshift.launch  cv_bridge_demo.launch  face_detector.launch  face_tracker.launch  good_features.launch  lk_tracker.launch  (+2 more)
(+13 files in other folders)
